[package]
name = "kyvera-core"
version = "0.1.0"
edition = "2021"
authors = ["Kyvera Foundation"]
description = "Kyvera Continuum — Core protocol library"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]